--- a/my-first-web-page.html
+++ b/my-first-web-page.html
@@ -1,1 +1,14 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<h1>My First Web Page </h1>
+<p>User Name: ItxSue </p>
+<p>Course Number/Section: IS117-001 </p>
+<p> Course Name: Intro to Web Development </p>
+
+</body>
+</html>
