--- a/my-first-web-page.html
+++ b/my-first-web-page.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>My First Web Page </h1>
-<p>User Name: ItxSue </p>
+<p>User Name: ItxSue -- Suman Kanda </p>
 <p>Course Number/Section: IS117-001 </p>
 <p> Course Name: Intro to Web Development </p>
 
